--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 header {
     display: flex;
     justify-content: space-between;
-    /*background-color: black; -- Propriété à supprimer sur une nouvelle page*/
+    background-color: black;
 }
 
 #links, #socials {
@@ -27,12 +27,12 @@ header {
     margin-right: 30px;
 }
 
-#socials {
-    align-items: baseline;
+#socials li a i {
+    font-size: 30px;
 }
 
-#socials li a img {
-    width: 40%;
+#socials {
+    align-items: baseline;
 }
 
 #links li a, #socials li a {
